--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
   margin-top: -100px;
   margin-left: -300px;
  transform: rotate(20deg);
+  transform: skew(20deg);
 }
 .d {
   position: absolute;
@@ -26,7 +27,8 @@ body {
   left: 50%;
   margin-top: -100px;
   margin-left: -100px;
-  transform: rotate(20deg)
+  transform: rotate(20deg);
+  transform: skew(20deg);
 }      
 .a {
   position: absolute;
@@ -37,7 +39,8 @@ body {
   left: 50%;
   margin-top: -100px;
   margin-left: 100px;
-  transform: rotate(20deg)
+  transform: rotate(20deg);
+  transform: skew(20deg);
 }
 .k::after,
 .d::after,
