--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
 .a::after {
   position: absolute;
   top: -20px;
+    left: 25px;
   font-size: 10em;
   color: white;
   transform: skew(20deg);
