--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,9 @@ body {
 .k::after,
 .d::after,
 .a::after {
+  position: absolute;
    top: -20px;
-    left: 25px;
+   left: 25px;
   font-size: 10em;
   color: white;
   transform: skew(30deg)
