--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body {
   left: 50%;
   margin-top: -100px;
   margin-left: -300px;
+  border-style: dotted;
+  border-width: 2px;
 }
 .d {
   position: absolute;
@@ -25,6 +27,8 @@ body {
   left: 50%;
   margin-top: -100px;
   margin-left: -100px;
+  border-style: dotted;
+  border-width: 2px;
 }      
 .a {
   position: absolute;
@@ -35,6 +39,8 @@ body {
   left: 50%;
   margin-top: -100px;
   margin-left: 100px;
+  border-style: dotted;
+  border-width: 2px;
 }
 .k::after,
 .d::after,
