--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,9 @@ body {
   left: 50%;
   margin-top: -100px;
   margin-left: -300px;
-  border-style: dotted;
-  border-width: 2px;
+  border-style: double;
+  border-width: 5px;
+   border-color: 270ae5;
 }
 .d {
   position: absolute;
@@ -27,8 +28,9 @@ body {
   left: 50%;
   margin-top: -100px;
   margin-left: -100px;
-  border-style: dotted;
-  border-width: 2px;
+  border-style: double;
+  border-width: 5px;
+  border-color: 270ae5;
 }      
 .a {
   position: absolute;
@@ -39,32 +41,33 @@ body {
   left: 50%;
   margin-top: -100px;
   margin-left: 100px;
-  border-style: dotted;
-  border-width: 2px;
+  border-style: double;
+  border-width: 5px;
+   border-color: 270ae5;
 }
 .k::after{
   position: absolute;
    top: -20px;
    left: 25px;
   font-size: 10em;
-  color: #c31400;
- text-shadow:0px 5px 10px #fdff00;
+  color: #0c005a;
+ text-shadow:0px 5px 10px #00abff;
 }
 .d::after{
   position: absolute;
    top: -20px;
    left: 25px;
   font-size: 10em;
-  color: #c31400;
- text-shadow:0px 5px 10px #fdff00;
+  color: #0c005a;
+ text-shadow:0px 5px 10px #00abff;
 }
 .a::after {
   position: absolute;
    top: -20px;
    left: 25px;
   font-size: 10em;
-  color: #c31400;
- text-shadow:0px 5px 10px #fdff00;
+  color: #0c005a;
+ text-shadow:0px 5px 10px #00abff;
 }
 .k::after {
   content: "K";
