--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   margin-top: -100px;
   margin-left: -300px;
   border-style: double;
-  border-width: 5px;
+  border-width: 7px;
    border-color: 270ae5;
 }
 .d {
@@ -29,7 +29,7 @@ body {
   margin-top: -100px;
   margin-left: -100px;
   border-style: double;
-  border-width: 5px;
+  border-width: 7px;
   border-color: 270ae5;
 }      
 .a {
@@ -42,7 +42,7 @@ body {
   margin-top: -100px;
   margin-left: 100px;
   border-style: double;
-  border-width: 5px;
+  border-width: 7px;
    border-color: 270ae5;
 }
 .k::after{
@@ -50,24 +50,24 @@ body {
    top: -20px;
    left: 25px;
   font-size: 10em;
-  color: #0c005a;
- text-shadow:0px 5px 10px #00abff;
+  color: #4600b4;
+ text-shadow:0px 5px 6px #00abff;
 }
 .d::after{
   position: absolute;
    top: -20px;
    left: 25px;
   font-size: 10em;
-  color: #0c005a;
- text-shadow:0px 5px 10px #00abff;
+  color: #4600b4;
+ text-shadow:0px 5px 6px #00abff;
 }
 .a::after {
   position: absolute;
    top: -20px;
    left: 25px;
   font-size: 10em;
-  color: #0c005a;
- text-shadow:0px 5px 10px #00abff;
+  color: #4600b4;
+ text-shadow:0px 5px 6px #00abff;
 }
 .k::after {
   content: "K";
