--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 18px;
-  font-family: Tahoma;
+ font-family: "Fira Sans", sans-serif;
   font-weight: 500;
   backgroud: red;
 }
